introduce workaround for dynamic rendering in mat-table-filter-header.directive

--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -3,7 +3,8 @@
     <mat-card-title>Default filter triggerer</mat-card-title>
     <table
       mat-table
-      mat-table-filter
+      matSort
+      matTableFilter
       [dataSource]="dataSource"
       class="mat-elevation-z8"
     >
