--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -13,7 +13,9 @@
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
-        <th mat-header-cell mat-table-filter-header *matHeaderCellDef>Name</th>
+        <th mat-header-cell mat-table-filter-header *matHeaderCellDef>
+          <div mat-sort-header>Name</div>
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
       <ng-container matColumnDef="weight">
