--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -9,7 +9,14 @@
       class="mat-elevation-z8"
     >
       <ng-container matColumnDef="position">
-        <th mat-header-cell mat-table-filter-header *matHeaderCellDef>No.</th>
+        <th
+          mat-header-cell
+          mat-table-filter-header
+          matTableFilterHeaderType="number"
+          *matHeaderCellDef
+        >
+          No.
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
@@ -19,7 +26,12 @@
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
       </ng-container>
       <ng-container matColumnDef="weight">
-        <th mat-header-cell mat-table-filter-header *matHeaderCellDef>
+        <th
+          mat-header-cell
+          mat-table-filter-header
+          matTableFilterHeaderType="number"
+          *matHeaderCellDef
+        >
           Weight
         </th>
         <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
@@ -27,6 +39,19 @@
       <ng-container matColumnDef="symbol">
         <th mat-header-cell *matHeaderCellDef>Symbol</th>
         <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      </ng-container>
+      <ng-container matColumnDef="learned">
+        <th
+          mat-header-cell
+          mat-table-filter-header
+          matTableFilterHeaderType="boolean"
+          *matHeaderCellDef
+        >
+          Learned
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.learned ? 'Yes' : 'No' }}
+        </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
