--- a/libs/mat-table-filter/src/lib/mat-table-filter-button/mat-table-filter-button.component.html
+++ b/libs/mat-table-filter/src/lib/mat-table-filter-button/mat-table-filter-button.component.html
@@ -1,39 +1,65 @@
-<button
-  mat-icon-button
-  class="mat-table-filter-button"
-  [matMenuTriggerFor]="filterMenu"
+<div
+  class="mat-table-filter-button-container"
+  [style.visibility]="
+    _filterMenuOpened || parentHovered || _isFilterApplied
+      ? 'visible'
+      : 'hidden'
+  "
 >
-  <mat-icon>filter_alt</mat-icon>
-</button>
-<mat-menu #filterMenu="matMenu">
-  <form
-    class="mat-table-filter-form"
-    [formGroup]="_filterFormGroup"
-    (click)="$event.stopPropagation()"
+  <button
+    mat-icon-button
+    class="mat-table-filter-button"
+    *ngIf="headerType !== 'boolean'; else booleanFilter"
+    [ngClass]="{'mat-table-filter-button-indicator': _isFilterApplied}"
+    [matMenuTriggerFor]="filterMenu"
+    (menuOpened)="_filterMenuOpened = true"
+    (menuClosed)="handleMenuClose()"
   >
-    <mat-form-field>
-      <mat-label>Operators</mat-label>
-      <mat-select formControlName="operator">
-        <mat-option *ngFor="let operator of operators" [value]="operator">{{
-          operator
-        }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Input</mat-label>
-      <input matInput formControlName="input" />
-    </mat-form-field>
-    <div class="action-buttons">
-      <button mat-stroked-button type="reset" (click)="handleCancelClick()">
-        Cancel
-      </button>
-      <button
-        mat-raised-button
-        type="submit"
-        [disabled]="_filterFormGroup.invalid"
-      >
-        Apply
-      </button>
-    </div>
-  </form>
-</mat-menu>
+    <mat-icon>filter_alt</mat-icon>
+  </button>
+  <ng-template #booleanFilter>
+    <mat-checkbox
+      class="mat-table-filter-button"
+      color="primary"
+      [formControl]="_booleanFilterControl"
+      (change)="handleBooleanFilter()"
+    ></mat-checkbox>
+  </ng-template>
+  <mat-menu #filterMenu="matMenu">
+    <form
+      class="mat-table-filter-form"
+      [formGroup]="_filterFormGroup"
+      (ngSubmit)="handleFormSubmit()"
+      (click)="$event.stopPropagation()"
+    >
+      <mat-form-field>
+        <mat-label>Operators</mat-label>
+        <mat-select
+          formControlName="operator"
+          (selectionChange)="handleOperatorSelection($event)"
+        >
+          <mat-option *ngFor="let operator of operators" [value]="operator">{{
+            operator
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field *ngIf="_requiresInput">
+        <mat-label>Input</mat-label>
+        <input matInput formControlName="input" />
+      </mat-form-field>
+      <div class="action-buttons">
+        <button mat-stroked-button type="reset" (click)="handleCancelClick()">
+          Cancel
+        </button>
+        <button
+          mat-raised-button
+          type="submit"
+          color="primary"
+          [disabled]="_filterFormGroup.invalid"
+        >
+          Apply
+        </button>
+      </div>
+    </form>
+  </mat-menu>
+</div>
