--- a/libs/mat-table-filter/src/lib/mat-table-filter-button/mat-table-filter-button.component.scss
+++ b/libs/mat-table-filter/src/lib/mat-table-filter-button/mat-table-filter-button.component.scss
@@ -1,3 +1,7 @@
+.mat-table-filter-button {
+  font-size: x-small;
+}
+
 .mat-table-filter-form {
   display: flex;
   flex-direction: column;
@@ -8,4 +12,15 @@
     display: flex;
     gap: 5px
   }
+}
+
+.mat-table-filter-button-indicator::after {
+  content: ' ';
+  position: absolute;
+  top: 8px;
+  right: 5px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: grey;
 }
