--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,60 +1,55 @@
-<div class="container">
-  <mat-card>
-    <mat-card-title>Default filter triggerer</mat-card-title>
-    <table
-      mat-table
-      matSort
-      matTableFilter
-      [dataSource]="dataSource"
-      class="mat-elevation-z8"
+<table
+  mat-table
+  matSort
+  matTableFilter
+  [dataSource]="dataSource"
+  class="mat-elevation-z8"
+>
+  <ng-container matColumnDef="position">
+    <th
+      mat-header-cell
+      mat-table-filter-header
+      matTableFilterHeaderType="number"
+      *matHeaderCellDef
     >
-      <ng-container matColumnDef="position">
-        <th
-          mat-header-cell
-          mat-table-filter-header
-          matTableFilterHeaderType="number"
-          *matHeaderCellDef
-        >
-          No.
-        </th>
-        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell mat-table-filter-header *matHeaderCellDef>
-          <div mat-sort-header>Name</div>
-        </th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="weight">
-        <th
-          mat-header-cell
-          mat-table-filter-header
-          matTableFilterHeaderType="number"
-          *matHeaderCellDef
-        >
-          Weight
-        </th>
-        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-      </ng-container>
-      <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef>Symbol</th>
-        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-      </ng-container>
-      <ng-container matColumnDef="learned">
-        <th
-          mat-header-cell
-          mat-table-filter-header
-          matTableFilterHeaderType="boolean"
-          *matHeaderCellDef
-        >
-          Learned
-        </th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.learned ? 'Yes' : 'No' }}
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </mat-card>
-</div>
+      No.
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+  </ng-container>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell mat-table-filter-header *matHeaderCellDef>
+      <div mat-sort-header>Name</div>
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
+  <ng-container matColumnDef="weight">
+    <th
+      mat-header-cell
+      mat-table-filter-header
+      matTableFilterHeaderType="number"
+      *matHeaderCellDef
+    >
+      Weight
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+  </ng-container>
+  <ng-container matColumnDef="symbol">
+    <th mat-header-cell mat-table-filter-header *matHeaderCellDef>Symbol</th>
+    <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+  </ng-container>
+  <ng-container matColumnDef="learned">
+    <th
+      mat-header-cell
+      mat-table-filter-header
+      matTableFilterHeaderType="boolean"
+      *matHeaderCellDef
+    >
+      Learned
+    </th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.learned ? 'Yes' : 'No' }}
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
